Spacing and sizing fixes

--- a/mcintryelaw/front/assets/common/stylus/settings/helpers.styl
+++ b/mcintryelaw/front/assets/common/stylus/settings/helpers.styl
@@ -62,6 +62,9 @@ section.gb-container.text-block-container > .wp-block-group > .wp-block-group__i
 .no-padding-bottom
   padding-top: 0px !important;
    
+.wp-block-spacer.spacer-medium
+  height: 60px !important
+
 #map-section .map-container
   position: relative;
   width: 100%;
@@ -125,10 +128,19 @@ section.gb-container.text-block-container > .wp-block-group > .wp-block-group__i
     position: relative
     top: 0px
     margin-bottom: 0px !important
+  
+  .wp-block-spacer.spacer-medium
+    height: 50px !important
     
 +media-mobile(768px)
   .one-container .site-content
     padding-top: 0 !important;
+    
+  .wp-block-columns:has(.wp-block-column > ul.wp-block-list)
+    row-gap: 0;
+  
+  .wp-block-columns > .wp-block-column > ul.wp-block-list
+    margin: 0 0 0em 3em;
 
 +media-mobile()
   ._mobile
@@ -153,3 +165,6 @@ section.gb-container.text-block-container > .wp-block-group > .wp-block-group__i
   section.gb-container.text-block-container > .wp-block-group
     padding-top $container-padding-mobile
     padding-bottom $container-padding-mobile
+    
+  .wp-block-spacer.spacer-medium
+    height: 30px !important
