--- a/mcintryelaw/front/assets/comp-wp/blocks/block-photo-text.styl
+++ b/mcintryelaw/front/assets/comp-wp/blocks/block-photo-text.styl
@@ -58,13 +58,15 @@
     margin-bottom: $container-padding-tablet;
     &._mobile-img-bottom
       padding-bottom 50px
+      margin-bottom 0px !important
       .block-image
         order 3
         margin-top -220px
-        z-index 1
+        z-index 2
       .block-content
         padding-bottom 260px !important
         margin-top 0 !important
+        z-index: 1
     .photo-text-inner
       padding 0
       flex-wrap: wrap
@@ -89,6 +91,6 @@
   .block-photo-text 
     .block-content
       margin: -8% -30px 0 !important 
-      padding 50px 30px 78px !important
+      padding 60px 30px 70px !important
     h2
       font-size: 35px 
