--- a/mcintryelaw/front/assets/comp-wp/blocks/cta-banner-block.styl
+++ b/mcintryelaw/front/assets/comp-wp/blocks/cta-banner-block.styl
@@ -33,16 +33,17 @@
 
 +media-mobile(600px)  
   .CTA-banner-block
-    padding: 102px 0 94px
+    padding: 80px 0 80px
   .CTA-banner-inner-text  
     width 100%
-    h1, h2, p
+    h1, h2
       padding-left 16px
     h1, h2
-      margin-bottom 32px
+      margin-bottom 20px
       border-left-width: 7px
     p
       margin-bottom 70px
+      padding-left 20px
     .gb-button
       margin-left 0
   .CTA-banner-background
