--- a/mcintryelaw/front/assets/comp-wp/blocks/logo-block.styl
+++ b/mcintryelaw/front/assets/comp-wp/blocks/logo-block.styl
@@ -1,5 +1,5 @@
 .logo-block
-  padding 50px 0
+  padding-top 40px
   .logo-block-inner
     column-gap: 15px
   .wp-block-heading
