--- a/mcintryelaw/front/assets/comp-wp/blocks/stats-block.styl
+++ b/mcintryelaw/front/assets/comp-wp/blocks/stats-block.styl
@@ -42,7 +42,7 @@
 
 +media-mobile()
   .stats-block    
-    padding-bottom 60px
+    padding-bottom 160px
     position relative
     .stats-header-wrapper
       margin-bottom 30px !important
@@ -55,5 +55,5 @@
         border-top 2px solid $bg-color-blue
     .gb-button
       position absolute
-      bottom 110px
+      bottom 70px
       left 30px
