--- a/mcintryelaw/front/assets/comp-wp/forms/custom-form.styl
+++ b/mcintryelaw/front/assets/comp-wp/forms/custom-form.styl
@@ -47,6 +47,7 @@
 
 +media-mobile(639px)
   .contact-cta-block
+    padding 70px 0
     .contact-cta-inner
       gap 20px
     .contact-cta-title
