--- a/mcintryelaw/front/assets/comp-wp/nav/main-nav.styl
+++ b/mcintryelaw/front/assets/comp-wp/nav/main-nav.styl
@@ -46,7 +46,7 @@
           background-position: center
           background-size: contain
           background-image: url('../images/icons/angle-right.svg')
-          margin-left 4px
+          margin-left 6px
           rotate 90deg
         .mega-indicator
           display none !important
