--- a/mcintryelaw/front/assets/components/sliders/sl-attorneys/sl-attorneys.styl
+++ b/mcintryelaw/front/assets/components/sliders/sl-attorneys/sl-attorneys.styl
@@ -38,4 +38,16 @@
       trc()
       &:hover
         color $bg-hover-red
-        
+
++media-tablet()
+  .sl-attorneys
+    padding 60px 0 80px
+    &__inner
+      margin 0 auto 40px
+   
++media-mobile()
+  .sl-attorneys
+    padding 50px 0 70px
+    &__inner
+      margin 0 auto 30px
+      
